WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172449
[Win] Increase test timeout for slow tests.
https://bugs.webkit.org/show_bug.cgi?id=172449
Summary
[Win] Increase test timeout for slow tests.
Per Arne Vollan
Reported
2017-05-22 07:33:17 PDT
There are a number of tests which are finishing just around the timeout limit. We can increase the timeout to make sure these tests will not time out. 06:31:10.330 7616 10 slowest tests that are not marked as SLOW and did not timeout/crash: 06:31:10.330 7616 imported/w3c/web-platform-tests/html/browsers/browsing-the-web/unloading-documents/004.html took 29.3 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/background-fetch/interfaces.worker.html took 29.1 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/html/browsers/browsing-the-web/unloading-documents/unload/006.html took 29.1 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/html/browsers/history/the-history-interface/joint_session_history/001.html took 29.1 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/html/semantics/forms/textfieldselection/selection-start-end.html took 29.1 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/html/webappapis/scripting/processing-model-2/compile-error-cross-origin-setInterval.html took 29.1 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/FileAPI/url/origin.sub.html took 29.1 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/html/semantics/document-metadata/the-meta-element/pragma-directives/attr-meta-http-equiv-refresh/parsing.html took 29.0 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/html/dom/documents/dom-tree-accessors/Document.currentScript.html took 29.0 seconds 06:31:10.330 7616 imported/w3c/web-platform-tests/html/semantics/forms/textfieldselection/textfieldselection-setSelectionRange.html took 29.0 seconds
Attachments
Patch
(2.13 KB, patch)
2017-05-22 07:37 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews112 for mac-elcapitan
(1.55 MB, application/zip)
2017-05-22 09:03 PDT
,
Build Bot
no flags
Details
Patch
(1.62 KB, patch)
2017-05-22 23:10 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-05-22 07:37:26 PDT
Created
attachment 310870
[details]
Patch
Alexey Proskuryakov
Comment 2
2017-05-22 08:04:03 PDT
Comment on
attachment 310870
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310870&action=review
> Tools/ChangeLog:8 > + There are a number of tests which are finishing just around the timeout limit.
What makes these tests so incredibly slow?
Build Bot
Comment 3
2017-05-22 09:03:48 PDT
Comment on
attachment 310870
[details]
Patch
Attachment 310870
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3794555
New failing tests: imported/w3c/web-platform-tests/media-source/mediasource-buffered.html
Build Bot
Comment 4
2017-05-22 09:03:49 PDT
Created
attachment 310885
[details]
Archive of layout-test-results from ews112 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Per Arne Vollan
Comment 5
2017-05-22 11:06:56 PDT
(In reply to Alexey Proskuryakov from
comment #2
)
> Comment on
attachment 310870
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=310870&action=review
> > > Tools/ChangeLog:8 > > + There are a number of tests which are finishing just around the timeout limit. > > What makes these tests so incredibly slow?
I also tested imported/w3c/web-platform-tests/html/browsers/browsing-the-web/unloading-documents/004.html on Mac (debug), and it seems to take almost 30 seconds to finish.
Per Arne Vollan
Comment 6
2017-05-22 23:02:14 PDT
It might be better to mark these tests as slow instead of increasing the test timeout.
Per Arne Vollan
Comment 7
2017-05-22 23:10:50 PDT
Created
attachment 310981
[details]
Patch
Alexey Proskuryakov
Comment 8
2017-05-23 10:32:35 PDT
I'm still not sure if all these tests are so slow legitimately. Having tests that take 30 seconds is very costly, so we should consider deleting them unless they are exceptionally important.
Per Arne Vollan
Comment 9
2017-05-23 23:00:56 PDT
(In reply to Alexey Proskuryakov from
comment #8
)
> I'm still not sure if all these tests are so slow legitimately. Having tests > that take 30 seconds is very costly, so we should consider deleting them > unless they are exceptionally important.
Also, there might be a few more slow tests, since the script only displays the 10 slowest. Thanks for reviewing!
WebKit Commit Bot
Comment 10
2017-05-23 23:25:34 PDT
Comment on
attachment 310981
[details]
Patch Clearing flags on attachment: 310981 Committed
r217321
: <
http://trac.webkit.org/changeset/217321
>
WebKit Commit Bot
Comment 11
2017-05-23 23:25:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2017-05-30 20:26:37 PDT
<
rdar://problem/32479821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug