[Win] Increase test timeout for slow tests. https://bugs.webkit.org/show_bug.cgi?id=172449

Reviewed by Alexey Proskuryakov.

Instead of using a fixed timeout of 30 seconds for all tests, we should use the
timeout member in the TestRunner class.

* DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::setWaitToDump):


Canonical link: https://commits.webkit.org/189440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217321 268f45cc-cd09-0410-ab3c-d52691b4dbfc